--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "^18.0.12",
+    "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "private": true
 }
